# payment-app

./: .env.example  AI_USAGE.md  Cargo.toml  DESIGN.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml
migrations/: 0001_init.sql
src/: lib.rs  main.rs
src/application/: mod.rs
src/application/commands/: mod.rs
src/application/dto/: mod.rs
src/application/queries/: mod.rs
src/application/use_cases/: create_customer.rs  create_invoice.rs  finalize_invoice.rs  mod.rs  pay_invoice.rs  register_webhook.rs  void_invoice.rs  writeoff_invoice.rs
src/config/: settings.rs
src/domain/entities/: api_key.rs  business.rs  customer.rs  invoice.rs  mod.rs  payment_attempt.rs  webhook.rs
src/domain/repositories/: api_key_repository.rs  customer_repository.rs  idempotency_repository.rs  invoice_repository.rs  mod.rs  payment_repository.rs  webhook_repository.rs
src/domain/services/: invoice_service.rs  mod.rs  payment_service.rs  webhook_service.rs
src/domain/value_objects/: idempotency_key.rs  invoice_state.rs  mod.rs  money.rs  payment_status.rs
src/infrastructure/: mod.rs
src/infrastructure/auth/: api_key_middleware.rs  argon.rs  mod.rs
src/infrastructure/db/: postgres.rs
src/infrastructure/psp/: client.rs  models.rs
src/infrastructure/repositories/: mod.rs
src/infrastructure/webhooks/: dispatcher.rs  mod.rs  retry_worker.rs  signer.rs
src/interfaces/: mod.rs
src/shared/: constants.rs  errors.rs  mod.rs  response.rs  utils.rs
tests/: concurrency_test.rs  idempotency_test.rs  payment_timeout_test.rs  webhook_test.rs
(+5 files in other folders)
